cli/tests/testdata/set_timeout_error_handled.ts.out
{
  cancelable: true,
  message: "Uncaught Error: foo",
  filename: "[WILDCARD]/set_timeout_error_handled.ts",
  lineno: 14,
  colno: 9,
  error: Error: foo
    at [WILDCARD]/set_timeout_error_handled.ts:14:9
    at [WILDCARD]
}
